# core-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md
libraries/: CMakeLists.txt  Doxyfile  Doxyfile.css  DoxygenFooter.html  DoxygenHeader.html  DoxygenLayout.xml  DoxygenStyle.css  README.md
libraries/ah_base/: CMakeLists.txt  README.md  README.txt  index.dox
libraries/ah_base/cmake/: DownloadLiburing.cmake  DownloadLiburing.cmake.in  FindLiburing.cmake
libraries/ah_base/include/ah/: abort.h  alloc.h  assert.h  base.h  buf.h  conf.h  defs.h  err.h  intrin.h  ip.h  lib.h  loop-internal.h  loop.h  math.h  meta.h  palloc.h  rw.h  sock.h  str.h  task.h  tcp.h  time.h  udp.h  utf8.h
libraries/ah_base/include/ah/internal/: _base.gen  _base.gen.in  _buf-posix.h  _buf-win32.h  _buf.h  _err.h  _loop-iocp.h  _loop-kqueue.h  _loop-uring.h  _loop.h  _page-allocator-gen.h  _palloc.h  _ring-gen.h  _sock-bsd.h  _sock.h  _str.h  _task-iocp.h  _task-kqueue.h  _task-uring.h  _task.h  _tcp-iocp.h  _tcp-kqueue.h  _tcp-uring.h  _tcp.h  _time-darwin.h  _time-uring.h  _time-win32.h  _time.h  _udp-iocp.h  _udp-kqueue.h  _udp-uring.h  _udp.h  buf.h  loop.h  page-allocator-gen.h  ring-gen.h  sock.h  str.h  task.h  tcp.h  (+2 more)
libraries/ah_base/include/ah/internal/bsd/: sock.h
libraries/ah_base/include/ah/internal/collections/: list.h  ring.h  slab.h
libraries/ah_base/include/ah/internal/darwin/: time.h
libraries/ah_base/include/ah/internal/iocp/: loop.h  task.h  tcp.h  time.h  (+1 more)
libraries/ah_base/src/: abort-posix.c  abort-win32.c  abort.c  alloc.c  base.c  buf-posix.c  buf-win32.c  buf.c  err.c  ip.c  lib.c  loop-evt.h  loop-iocp.c  loop-kqueue.c  loop-uring.c  loop.c  math.c  meta.c  palloc.c  rw.c  sock-bsd.c  sock-internal.h  sock.c  str.c  task-iocp.c  task-kqueue.c  task-uring.c  task.c  tcp-bsd.c  tcp-in.c  tcp-in.h  tcp-iocp.c  tcp-kqueue.c  tcp-out.c  tcp-posix.c  tcp-trans-default-bsd.c  tcp-trans-default-iocp.c  tcp-trans-default-kqueue.c  tcp-trans-default-uring.c  tcp-trans-default.c  (+27 more)
libraries/ah_base/src/bsd/: sock.c  tcp.c  udp.c
libraries/ah_base/src/collections/: list.c  ring.c  slab.c
libraries/ah_base/src/iocp/: loop.c  task.c  tcp.c  time.c  udp.c
libraries/ah_base/src/kqueue/: loop.c  task.c  tcp.c  time.c  udp.c
libraries/ah_base/src/posix/: abort.c  buf.c
libraries/ah_base/src/uring/: loop.c  task.c  tcp.c  udp.c
libraries/ah_base/src/win32/: abort.c  buf.c  time.c  winapi.c  winapi.h
libraries/ah_base/test/: buf.c  err.c  main.c  math.c  sock.c  task.c  tcp.c  test-buf.c  test-collections-list.c  test-collections-ring.c  test-err.c  test-ip.c  test-math.c  test-sock.c  test-task.c  test-tcp.c  test-time.c  test-udp.c  test-utf8.c  time.c  udp.c
libraries/ah_c_service_discovery/: CMakeLists.txt  README.md  index.dox
libraries/ah_c_service_discovery/include/ah-c/: service-discovery.h
libraries/ah_c_service_discovery/include/ah-c/internal/: _service-discovery.gen.in  _service-discovery.h
libraries/ah_c_service_discovery/src/: service-discovery-lib-version.c  service-discovery.c
libraries/ah_c_service_discovery/test/: main.c
libraries/ah_consumer_service_discovery/: CMakeLists.txt  index.dox
libraries/ah_consumer_service_discovery/include/ah/consumer/: service-discovery.h
libraries/ah_consumer_service_discovery/src/: service-discovery-lib-version.c  service-discovery.c
libraries/ah_consumer_service_discovery/test/: main.c
libraries/ah_http/: CMakeLists.txt  README.md  README.txt
libraries/ah_http/include/ah/: http.h
libraries/ah_http/include/ah/internal/: _http.gen  _http.gen.in  _http.h  http.h
libraries/ah_http/src/: http-body.c  http-client.c  http-client.h  http-hmap.c  http-hmap.h  http-iheaders.c  http-iheaders.h  http-lclient.c  http-lib-version.c  http-msg-queue.h  http-parser.c  http-parser.h  http-rclient.c  http-rclient.h  http-server.c  http-utils.c  http-utils.h  http-writer.c  http-writer.h  http.c
libraries/ah_http/test/: http-hmap.c  http-iheaders.c  http-parser.c  main.c  test-http-client.c  test-http-hmap.c  test-http-parser.c  test-http-server.c  test-http.c
libraries/ah_json/: CMakeLists.txt  README.md  README.txt  index.dox
libraries/ah_json/examples/: construct_object.c  interpret_object.c
libraries/ah_json/include/ah/: json.h
libraries/ah_json/include/ah/internal/: _json.gen  _json.gen.in
libraries/ah_json/src/: json-lib-version.c  json-num.c  json-parse.c  json-str.c  json.c
libraries/ah_json/test/: main.c  test-json-num-parse.c  test-json-parse.c  test-json-str-compare.c  test-json-str-escape.c  test-json-str-unescape.c  test-json.c
libraries/ah_mbedtls/: CMakeLists.txt  README.md  README.txt  index.dox
libraries/ah_mbedtls/cmake/: DownloadMbedTLS.cmake  DownloadMbedTLS.cmake.in  FindMbedCrypto.cmake  FindMbedTLS.cmake  FindMbedX509.cmake
libraries/ah_mbedtls/include/ah/: mbedtls.h
libraries/ah_mbedtls/include/ah/internal/: _mbedtls.gen  _mbedtls.gen.in  _mbedtls.h
libraries/ah_mbedtls/src/: mbedtls-client.c  mbedtls-client.h  mbedtls-lib-version.c  mbedtls-server.c  mbedtls-server.h  mbedtls-utils.c  mbedtls-utils.h
libraries/ah_mbedtls/test/: certs.c  certs.h  main.c  test-mbedtls.c
libraries/ah_protocol_http/: CMakeLists.txt
libraries/ah_protocol_http/include/ah/: http.h
libraries/ah_protocol_http/src/: http.c
libraries/ah_protocol_http/test/: main.c
libraries/ah_tls/: CMakeLists.txt
libraries/ah_tls/include/ah/: tls.h
libraries/ah_tls/include/ah/internal/: _tls.h
libraries/ah_tls/src/: tls-client-mbedtls.c  tls-client.h  tls-mbedtls.c  tls-openssl3.c  tls-server-mbedtls.c  tls-server.h  tls-utils-mbedtls.c  tls-utils-mbedtls.h  tls-utils.c  tls-utils.h  tls-wolfssl.c
libraries/ah_tls/test/: main.c
libraries/ah_unit/: CMakeLists.txt  README.md  index.dox
libraries/ah_unit/include/ah/: unit.h
libraries/ah_unit/include/ah/internal/: _unit.gen  _unit.gen.in  _unit.h  unit.h
libraries/ah_unit/src/: unit.c
libraries/ah_x509/: CMakeLists.txt
libraries/ah_x509/include/ah/: x509.h
libraries/ah_x509/src/: x509-mbedtls.c
libraries/ah_x509/test/: main.c
(+26 files in other folders)
